--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ language: python
 python:
     - 3.6
 
+install:
+    - pip install -r requirements.txt
+
 script:
     - python3 -m unittest discover
 
