--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - python3 -m unittest discover
+    - python -m unittest discover
 
