--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 # After changing this file, check it on:
 #   http://lint.travis-ci.org/
 
-language: python
-
-os:
-    - linux
-    - osx
-
-python:
-    - 2.7
-    - 3.2
-    - 3.4
-    - 3.5
-    - 3.6
+matrix:
+    include:
+        - os: osx
+          language: generic
+          before_install:
+                - brew update
+                - brew install python3
+                - virtualenv env -p python3
+                - source env/bin/activate  
+        - os: linux
+          language: python
+          python: 2.7
+        - os: linux
+          language: python
+          python: 3.6
 
 install:
     - pip install -r requirements.txt
