--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 # After changing this file, check it on:
 #   http://lint.travis-ci.org/
 
+os: linux
+
+language: python
+
+python: 
+    - 2.7
+    - 3.2
+    - 3.4
+    - 3.5
+    - 3.6
+
 matrix:
     include:
         - os: osx
@@ -10,12 +21,6 @@ matrix:
                 - brew install python3
                 - virtualenv env -p python3
                 - source env/bin/activate  
-        - os: linux
-          language: python
-          python: 2.7
-        - os: linux
-          language: python
-          python: 3.6
 
 install:
     - pip install -r requirements.txt
